# gaussian-ray-tracing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMake/: FindOptiX.cmake
shaders/: shader.cu  tracer.cu  tracer.cuh
src/: CUDAOutputBuffer.cpp  CUDAOutputBuffer.h  Camera.cpp  Camera.h  Display.cpp  Display.h  Exception.h  GaussianData.cpp  GaussianData.h  GaussianTracer.cpp  GaussianTracer.h  Parameters.h  Utility.h  gui.cpp  gui.h  main.cpp  shader.cu  vector_math.h
src/geometry/: Icosahedron.h  LoadMesh.cpp  LoadMesh.h  Mesh.cpp  Mesh.h  MeshData.cpp  MeshData.h  Plane.cpp  Plane.h  Primitives.cpp  Primitives.h  Sphere.cpp  Sphere.h
